# nue

./: .gitattributes  .gitignore  CMakeLists.txt  Changes.md  LICENSE  LICENSE.md  README.md  main.c  switch-case-test-nue.TODO.nue
OLD/src/: lexer.c  nue.h
examples/: 1BillionBenchmark.nu  Operators and Punctuation.txt
examples/1BillionBenchmark/: README.md  billion.js  billion.lua  billion.py  billion.ts
include/: token.h
nue/: token.h  tokeniser.c  tokeniser.h
old/: lexer.c  lexer.h  token.h
old/examples/: Operators and Punctuation.txt  billion.nue  customIteration.nue
old/examples/1BillionBenchmark/: README.md  billion.rb
old/playground/: AllTokensUsed.nue  CharacterInventory.nue  README.md  SchoolManagementSystem.nue  UltimateFunctionExample.nue  appCommandParser.nue  epic.nue  functionIdea.nue  lexerConfusion.nue  luacompare.txt  maybeClasses.nue  nice.nue  nununuidk.nue
old/playground/OLD/: FullFool.nue  NuFull.nue  NuSimple.nue  README.md  noCommentsfull.nue
playground/: AllTokensUsed.nue  README.md  SchoolManagementSystem.nu  SchoolManagementSystem.nue  THINK ABOUT THIS LATER.txt  UltimateFunctionExample.nu  appCommandParser.nue  epic.nu  functionIdea.nu  lexerConfusion.nue  maybeClasses.nue  nice.nu  nununuidk.nu
playground/OLD/: NuFull.nu  NuSimple.nu  README.md
src/: lexer.c  test_lexer.c  token.h
tests/: FullTokenTests.nue  compileLexerLibTest.sh  compileLexerTest.sh  lexer.snippets.test.json  lexer.test.c  testTokenisationTime.sh
